fixing evaluation methodologies
Done up to scheduling paper

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -151,9 +151,9 @@
 
 {\titleformat{\section}{\scshape\Large\bfseries}{\thesection}{1em}{}
 
-{\titleformat{\subsection}{\scshape\bfseries}{\thesection}{1em}{}
+{\titleformat{\subsection}{\scshape\bfseries}{\thesubsection}{1em}{}
 
-{\titleformat{\subsubsection}{\scshape\itshape}{}{1em}{}
+{\titleformat{\subsubsection}{\scshape\itshape}{\thesubsubsection}{1em}{}
 
 
 % ******************************************************************************
