--- a/background.tex
+++ b/background.tex
@@ -6,13 +6,15 @@ The second part of this chapter, provides information about the parallel program
 Finally we we provide a high-level description of the applications used in this work.
 
 \section{The ARM big.LITTLE Architecture}
+\label{sec.background.arm}
 \input{bigLittle_background}
-
-\section{Task-Based Parallel Programming Models}
-\input{TB_models_background}
-
-\section{Applications}
-\input{applications_background}
 
 \section{The TaskSim Simulator}
 \input{simulation_background}
+
+\section{Task-Based Parallel Programming Models}
+\label{sec.background.taskbased}
+\input{TB_models_background}
+
+
+\input{applications_background}
