--- a/introduction.tex
+++ b/introduction.tex
@@ -74,6 +74,8 @@ We evaluate the impact of using an inherently load-balanced execution model such
 Recent examples~\cite{Ayguade:TPDS2009, OpenMP4.0:Manual2013, OmpSs_PPL11, vectorMulticore, Bauer.2012.SC,rollback,Vandierendonck:PACT2011, Vandierendonck:Hyperq,spawn} include clauses to specify inter-task dependencies and remove most barriers which are the major source of load imbalance on AMCs.
 Another approach of scheduling in the runtime system is to change the existing statically-scheduled work-sharing constructs for the applications implemented in OpenMP to use dynamic scheduling. 
 
+
+\section{Thesis Contributions}
 This paper provides the first to our knowledge comprehensive evaluation of representative parallel applications on a real AMC platform: the Odroid-XU3 development board with ARM big.LITTLE architecture.
 We analyze the effectiveness of the aforementioned scheduling solutions in terms of performance, power and energy.
 We show why parallel applications are not ready to run on AMCs and how OS and runtime schedulers can overcome these issues depending on the application characteristics.
@@ -86,6 +88,8 @@ Finally, we show how the runtime system approach overcomes these issues, and imp
 % the effectiveness of these solutions at different levels of the software stack with a comprehensive evaluation of representative parallel applications on a real AMC platform: the Odroid-XU3 development board. 
 %This platform features an eight-core Samsung Exynos 5422 chip with ARM big.LITTLE architecture with four out-of-order Cortex-A15 and four in-order Cortex-A7 cores.
 
+
+\section{Thesis Organization}
 The rest of this document is organized as follows: Section~\ref{sec:background} describes the evaluated AMC processor, while Section~\ref{sec:scheduling} provides information on 
 scheduling at the OS and runtime system levels. 
 Section~\ref{sec:experimental} describes the experimental framework. 
