--- a/scheduling/07-conclusions.tex
+++ b/scheduling/07-conclusions.tex
@@ -1,3 +1,6 @@
+
+\section{Conclusions}
+\label{sec.scheduling.conclusions}
 We introduced the first critical-path-aware dynamic scheduler for heterogeneous systems as well as the first hybrid criticality-aware scheduler. Like CATS and contrary to previous works on criticality-aware scheduling that use synthetic TDGs and require prior knowledge of profiling information, our proposals work on real platforms with real applications and do not require off-line profiling.
 %, they are implementable and work without the need of profiling.
 
