--- a/bigLittlePARSEC/paperPARSEC.tex
+++ b/bigLittlePARSEC/paperPARSEC.tex
@@ -1,5 +1,11 @@
 \chapter{Study of Asymmetric Systems}
 
+This chapter presents an initial thorough study of scheduling on different levels of the software stack on an asymmetric multi-core (AMC) system. 
+We evaluate how ready are HPC applications to move to an asymmetric environment taking into account performance and energy consumption. 
+We compare scheduling approaches on the application, OS and runtime system levels.
+
+\newpage 
+
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
 \section{Introduction}
@@ -12,11 +18,11 @@
 \label{sec:scheduling}
 \input{bigLittlePARSEC/03-scheduling}
 
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%
-\section{Experimental Methodology}
-\label{sec:experimental}
-\input{bigLittlePARSEC/04-experimental}
+%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%
+%\section{Experimental Methodology}
+%\label{sec:experimental}
+%\input{bigLittlePARSEC/04-experimental}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
