--- a/scheduling/hybrid.tex
+++ b/scheduling/hybrid.tex
@@ -5,7 +5,7 @@ The Hybrid Criticality Scheduler (HYBRID) is a combination of the CATS and CPATH
 HYBRID keeps the simplicity of the implementation of CATS and introduces the task execution time only if available.
 This results in an efficient low-overhead scheduler that computes the critical path of a TDG more faithfully than CATS and with lower overheads than CPATH.
 %The idea for this is again based on separating the critical and non-critical tasks and execute the critical tasks on the fast cores of the system.
-This section describes HYBRID through its relation to CATS and CPATH described in Sections~\ref{sec.cats} and~\ref{sec.cpath}. 
+This section describes HYBRID through its relation to CATS and CPATH described in Sections~\ref{sec.scheduling.cats} and~\ref{sec.scheduling.cpath}. 
 We focus our description on the task prioritization, since task submission and task-to-core assignment for HYBRID are identical to CPATH.
 
 As shown, CPATH computes priorities on task completion. 
@@ -13,9 +13,8 @@ The algorithm for priority computation is an expensive operation and is in the c
 on task completion the core becomes available but the start of the next task is delayed by priority computation.
 Also, when multiple cores are completing tasks, there will be contention on accessing the TDG for priority computation.
 On the other hand, CATS computes priorities during task creation.
-The computation of priorities during task creation is more efficient because, unless there is nested parallelism, one core creates all tasks
-and therefore there is no contention on priority computation. The downside is that there is potentially less information available 
-on tt-is pair execution time on task creation, as some task type may have not been executed yet at the time all tasks are created.
+The computation of priorities during task creation is more efficient because, unless there is nested parallelism, one core creates all tasks and therefore there is no contention due to multi-threading on priority computation. 
+The downside is that there is potentially less information available on tt-is pair execution time on task creation, as some task type may have not been executed yet at the time all tasks are created.
 %there is only one core involved in this procedure responsible for the creation of the tasks.
 %In addition, the rest of the cores are exclusively used for executing tasks undisturbed.
 
@@ -38,7 +37,7 @@ Therefore, task execution information will not be available during priority comp
 If the application has a large TDG and task creation overlaps with a sufficient amount of task exits, HYBRID will use bottom-cost priorities.
 %CPATH on the other hand, updates priorities right after task cost is known, which leads to a more faithful critical path computation. 
 
-\begin{figure}[tr]
+\begin{figure}[t]
 \includegraphics[width=\columnwidth]{images/hybrid_prioritization.pdf} 
 \centering
 \caption{Priority assignment with HYBRID scheduler. Priority update when the edge between tasks 12 and 13 is created}
@@ -69,7 +68,7 @@ Like CPATH, HYBRID prioritizes tasks according to their \textit{bottom cost} and
 HYBRID constitutes of three steps: \textit{Task Prioritization, Task Submission} and \textit{Task-to-core assignment.}
 
 
-\subsubsection{Task prioritization}
+\subsection{Task prioritization}
 The HYBRID scheduler prioritizes tasks according to their \textit{bottom cost} and/or their \textit{bottom level}.
 The task prioritization step takes place during task creation.
 %If when a dependency is created the execution time of the tt-is of the successor is known, then it is used for the prioritization.
@@ -150,7 +149,7 @@ This way, the tasks end up being prioritized with the bottom-cost-based priority
 %If not then we update the execution time of the timesSet with the elapsed time of the finished task.
 %Meanwhile we use the \texttt{task$\_$prioritization} function; in this case, instead of always increasing the bottom-level by 1, the task$\_$prioritization querries the timesSet to find out whether the execution time has been computed.
 %If we have a valid execution time, then the bottom level of the predecessor is increased by this value instead of 1.
-\subsubsection{Task Submission and Task-to-Core Assignment}
+\subsection{Task Submission and Task-to-Core Assignment}
 The task submission and task-to-core assignment steps are identical to CPATH.
 
 
